--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+	<!-- START OF CUSTOM ADDITIONS -->
+
+		<title>Solana Philippines</title>
+
+	<!-- END OF CUSTOM ADDITIONS-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
