--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,37 @@
 
 	<!-- START OF CUSTOM ADDITIONS -->
 
+
+		<meta property="og:title" content="Github | Solana Philippines" />
+		<meta property="og:url" content="https://solana-philippines.github.io" />
+		<meta property="og:description" content="Official Github Organization for Solana Philippines" />
+		<meta property="og:image" content="/assets/images/meta-image.png" />
+		<meta property="og:type" content="website" /> 
+		
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Github | Solana Philippines" />
+		<meta name="twitter:url" content="https://solana-philippines.github.io" />
+		<meta name="twitter:description" content="Official Github Organization for Solana Philippines" />
+		<meta name="twitter:image:src" content="/assets/images/meta-image.png" /> 
+
+		<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/manifest.json">
+		<meta name="msapplication-TileColor" content="#000000">
+		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+		<meta name="theme-color" content="#000000">
+
 		<title>Solana Philippines</title>
 
 	<!-- END OF CUSTOM ADDITIONS-->
