--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,11 @@
 		<meta name="twitter:title" content="Github | Solana Philippines" />
 		<meta name="twitter:url" content="https://solana-philippines.github.io" />
 		<meta name="twitter:description" content="Official Github Organization for Solana Philippines" />
-		<meta name="twitter:image" content="https://github.com/solana-philippines/solana-philippines.github.io/blob/d30079151c154cc5b260a55c8d2176073ce76afd/public/assets/images/meta-image.png" /> 
+		<meta name="twitter:image" content="https://bafkreigapmdrmr7zjvrg5ylyt6efkus4ar2comueuooptk5o3hin3ltwoe.ipfs.nftstorage.link/" /> 
 		<meta property="og:title" content="Github | Solana Philippines" />
 		<meta property="og:url" content="https://solana-philippines.github.io" />
 		<meta property="og:description" content="Official Github Organization for Solana Philippines" />
-		<meta property="og:image" content="https://github.com/solana-philippines/solana-philippines.github.io/blob/d30079151c154cc5b260a55c8d2176073ce76afd/public/assets/images/meta-image.png" />
+		<meta property="og:image" content="https://bafkreigapmdrmr7zjvrg5ylyt6efkus4ar2comueuooptk5o3hin3ltwoe.ipfs.nftstorage.link/" />
 		<meta property="og:type" content="website" /> 
 		
 		<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
