add: google icons

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
 
 	<!-- START OF CUSTOM ADDITIONS -->
 
+		<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" rel="stylesheet" />
+
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:title" content="Github | Solana Philippines" />
 		<meta name="twitter:url" content="https://solana-philippines.github.io" />
